# Optiver_Trading_at_the_Close

./: README.md  pyproject.toml
notebooks/: RFE.ipynb  RFE_Results  hyperparameter_tunning.ipynb  pipeline.ipynb  profile_test.py  tabnet_test.ipynb  train_model.ipynb
notebooks/.ipynb_checkpoints/: weights_tunning-checkpoint.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/tabnet_test/: tabnet-0-4f465aed-4c84-4423-a95b-af46c1c23026.joblib  tabnet-1-e61a31de-77e8-45d8-8fd7-0c9c56f7beab.joblib  tabnet-10-aec80e5f-4204-4fa4-ace1-a7e3e886aed7.joblib  tabnet-11-a50b7a7f-178f-4782-a365-bff7d8c17123.joblib  tabnet-12-424c85ab-373f-4d63-93ef-f78183de8952.joblib  tabnet-13-5b699b9c-92bb-4ee0-ae74-de263ae93419.joblib  tabnet-14-7b33d98f-2e1b-40c2-a2e0-351df881f68a.joblib  tabnet-15-3ce91ea5-3df4-45d8-96dc-1c8d8aeee356.joblib  tabnet-16-2dd72d00-8737-4ae9-ac68-4c3b334b2405.joblib  tabnet-17-2e66fcb5-f6e3-42fa-8a89-8dab72ad96ac.joblib  tabnet-18-22eb96ee-2b81-47d7-9d7a-eaf94832768a.joblib  tabnet-19-43b8b4ae-03ad-489a-af12-9659df417bc9.joblib  tabnet-2-d3319746-0c77-46b4-bbd5-124531b02da1.joblib  tabnet-20-7260c624-102b-4a71-92a8-8030462ac51f.joblib  tabnet-21-b3bd0b27-2920-48c6-9245-2c7cd5ab1383.joblib  tabnet-22-9f6521bb-bd5a-48cd-807f-1c476f8746d9.joblib  tabnet-23-186a19ec-0882-4b97-9a36-efcfaac143f8.joblib  (+83 more)
optiver_trading_at_the_close/: column_selector.py  feature_engineering.py  mean_regressor_ensemble.py  memory_reduction.py  nearest_neightbors_features.py  tabnet_regressor_pandas_wrapper.py  utils.py
(+78 files in other folders)
