[tool.poetry]
name = "optiver-trading-at-the-close"
version = "0.1.0"
description = ""
authors = ["Diogo Carvalho <diogo-carvalho2000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "1.23.5"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
poetry = "^1.6.1"
optuna = "^3.3.0"
scikit-learn = "1.2.2"
xgboost = "1.7.6"
catboost = "1.2.1"
ipykernel = "^6.25.2"
nbformat = "^5.9.2"
pandas = "2.0.3"
lightgbm = "3.3.5"
numba = "^0.58.1"
pytorch-tabnet = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
